--- a/.github/workflows/build-padavan.yml
+++ b/.github/workflows/build-padavan.yml
@@ -42,6 +42,7 @@ jobs:
       env:
         TNAME: K2P
       run: |
+        pwd
         cd /opt/rt-n56u/trunk
         if [ ! -f configs/templates/$TNAME.config ] ; then
         echo "configs/templates/$TNAME.config not found "
@@ -98,7 +99,7 @@ jobs:
         sudo ./clear_tree
         sudo ./build_firmware_bkye $TNAME
         sudo mv -f images/*.trx /opt/images/
-        ls -l /opt/images/
+        ls -al /opt/images/
         echo "::set-env name=RELEASE_TAG::"$(TZ=UTC-8 date +"%Y.%m.%d")""
     - name: Upload to release
       uses: 1005789164/action-release@master
@@ -106,7 +107,7 @@ jobs:
         token: ${{ secrets.P_TOKEN }}
         gzip: false
         files: >
-          /opt/images/*.trx
+          opt/images/*.trx
         allow_override: true
     - name: Push firmware
       run: |
