--- a/.github/workflows/build-padavan.yml
+++ b/.github/workflows/build-padavan.yml
@@ -37,7 +37,7 @@ jobs:
         sh dl_toolchain.sh
     - name: Build Firmware
       env:
-        TNAME: K2P_nano
+        TNAME: K2P_nano-5.0
       run: |
         cd /opt/rt-n56u/trunk
         if [ ! -f configs/templates/$TNAME.config ] ; then
@@ -52,6 +52,12 @@ jobs:
         sed -i 's/CONFIG_FIRMWARE_INCLUDE_DNSFORWARDER=.*/CONFIG_FIRMWARE_INCLUDE_DNSFORWARDER=y/' .config
         sed -i 's/CONFIG_FIRMWARE_INCLUDE_IPERF3=.*/CONFIG_FIRMWARE_INCLUDE_IPERF3=y/' .config
         sed -i 's/CONFIG_FIRMWARE_INCLUDE_TTYD=.*/CONFIG_FIRMWARE_INCLUDE_TTYD=y/' .config
+        
+        sed -i 's/snds/sdns/g' user/smartdns/smartdns.sh
+        sed -i '/force-AAAA-SOA/a\else\nsed -i "/force-AAAA-SOA/d" $SMARTDNS_CONF' user/smartdns/smartdns.sh
+        sed -i 's/snds/sdns/g' user/httpd/variables.c
+        sed -i 's/snds/sdns/g' user/www/n56u_ribbon_fixed/Advanced_smartdns.asp
+        sed -i 's/snds/sdns/g' user/shared/defaults.c
         #########################################################################################
         
         ################################################################################################
