--- a/.github/workflows/build-padavan.yml
+++ b/.github/workflows/build-padavan.yml
@@ -41,6 +41,7 @@ jobs:
       run: |
         cd /opt/rt-n56u/trunk
         mkdir -p $GITHUB_WORKSPACE/images
+        chmod +x $GITHUB_WORKSPACE/diy.sh
         $GITHUB_WORKSPACE/diy.sh
         echo "::set-env name=TNAME::K2P_nano"
         $GITHUB_WORKSPACE/diy.sh
