--- a/.github/workflows/build-padavan.yml
+++ b/.github/workflows/build-padavan.yml
@@ -46,6 +46,7 @@ jobs:
         echo "::set-env name=TNAME::K2P_nano"
     - name: Build Firmware2
       run: |
+        cd /opt/rt-n56u/trunk
         $GITHUB_WORKSPACE/diy.sh
         echo "::set-env name=RELEASE_TAG::"$(TZ=UTC-8 date +"%Y.%m.%d")""
     - name: Upload to release
