--- a/.github/workflows/delrelease.yml
+++ b/.github/workflows/delrelease.yml
@@ -6,7 +6,8 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-18.04
+    name: Del Release
+    runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
 
     steps:
