--- a/.github/workflows/delrelease.yml
+++ b/.github/workflows/delrelease.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Del release
       uses: 1005789164/action-delrelease@master
       with:
-        token: ${{ secrets.P_TOKEN }}
+        token: ${{ secrets.GITHUB_TOKEN }}
         name: >
           2020.07.03
           2020.07.05
