--- a/.github/workflows/build-padavan.yml
+++ b/.github/workflows/build-padavan.yml
@@ -43,6 +43,7 @@ jobs:
     - name: Public diy
       run: |
         cd /opt/rt-n56u/trunk
+        cp -R $GITHUB_WORKSPACE/trunk/ ./
         ##################################################################################
         ###K2P
         sed -i 's/\# CONFIG_DEFAULT_5G_PROFILE is not set/CONFIG_DEFAULT_5G_PROFILE=y/g' configs/boards/K2P/kernel-3.4.x-5.0.config
@@ -61,7 +62,6 @@ jobs:
         sed -i '/\/usr\/bin\/AdGuardHome\/adguardhome.sh/i\\tmkdir -p $(ROMFSDIR)\/usr\/bin\/AdGuardHome' user/adguardhome/Makefile
         sed -i '/\/usr\/bin\/AdGuardHome\/adguardhome.sh/a\ifeq ($(CONFIG_FIRMWARE_INCLUDE_ADGUARDHOMEBIN),y)' user/adguardhome/Makefile
         sed -i '/ifeq ($(CONFIG_FIRMWARE_INCLUDE_ADGUARDHOMEBIN),y)/a\\t$(ROMFSINST) -p +x $(THISDIR)\/AdGuardHome \/usr\/bin\/AdGuardHome\/AdGuardHome\nendif' user/adguardhome/Makefile
-        cp -f $GITHUB_WORKSPACE/adguardhome.sh user/adguardhome/adguardhome.sh
         ##################################################################################
         
         mkdir -p $GITHUB_WORKSPACE/images
