--- a/.github/workflows/build-padavan.yml
+++ b/.github/workflows/build-padavan.yml
@@ -26,13 +26,13 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@master
+      uses: actions/checkout@main
     - name: Initialization environment
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
         sudo apt-get update
-        sudo apt-get -y install unzip libtool-bin curl cmake gperf gawk flex bison nano xxd fakeroot \
+        sudo apt-get -y install jq unzip libtool-bin curl cmake gperf gawk flex bison nano xxd fakeroot \
         cpio git python-docutils gettext automake autopoint texinfo build-essential help2man \
         pkg-config zlib1g-dev libgmp3-dev libmpc-dev libmpfr-dev libncurses5-dev libltdl-dev wget
     - name: Clone source code
@@ -81,7 +81,7 @@ jobs:
         sudo ./xy_build.sh XY-C1 1
         cp images/*.trx $GITHUB_WORKSPACE/images
     - name: Upload to release
-      uses: 1005789164/action-release@master
+      uses: 1005789164/action-release@1.0
       with:
         token: ${{ secrets.ACTION_TOKEN }}
         gzip: false
