--- a/.github/workflows/build-padavan-h.yml
+++ b/.github/workflows/build-padavan-h.yml
@@ -26,7 +26,7 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@master
+      uses: actions/checkout@main
     - name: Initialization environment
       run: |
         sudo apt-get update
